--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>AI BIUS Web Chatbot</title>
+  <title>I-A- ⚡  O-S- ✨</title>
   <style>
-    body {
-  margin: 0;
-  padding: 0;
+ html ,   body {
+  margin: 10px;
+  padding: 09px;
   font-family: 'Segoe UI', sans-serif;
   background: #1e1e1e;
   color: #fff;
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 100vh;
+  max-height: 100vh;
 }
 
 .chat-container {
@@ -103,8 +103,9 @@ button:hover {
 
 <body>
   <div class="chat-container">
-    <h1>💬 IA  BIUS   V</h1>
-    <h3>Version Infarto IA</h3>
+    <h1>💬 IA - Os- Chat - Nature Barin</h1>
+    <h3>V-alpha-0.0.22.09.25   </h3>
+    <p>Holi!! </p>
     <div id="chatBox" class="chat-box"></div>
     
     <div class="input-group">
