--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ button:hover {
   <div class="chat-container">
     <h1>💬 IA - Os- Chat - Nature Barin</h1>
     <h3>V-alpha-0.0.22.09.25   </h3>
-    <p>Holi!! </p>
+    <p>in-ia-os   / programer-os</p>
     <div id="chatBox" class="chat-box"></div>
     
     <div class="input-group">
